--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: system-ui, sans-serif;
+  font-family: 'Outfit', sans-serif;
   margin: 0;
   padding: 0;
   line-height: 1.6;
